--- a/source/sass/mgr/_coloris_modx.scss
+++ b/source/sass/mgr/_coloris_modx.scss
@@ -13,6 +13,7 @@
   &.clr-picker {
     width: 277px;
     border-radius: 3px;
+    z-index: 10000;
   }
   .clr-gradient {
     height: 150px;
